<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/beige" tools:context=".MainActivity">


    <Button
        android:id="@+id/statisticButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/statistic"
        android:layout_marginTop="132dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/recordButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/record"
        android:layout_below="@+id/statisticButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/planButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/plan"
        android:layout_below="@+id/recordButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


</RelativeLayout>
