<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background = "@color/beige">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:id="@+id/menu"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true">
            <ImageView
                android:id="@+id/goBackButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitStart"
                android:src ="@drawable/ic_action_previous_item"/>

            <TextView
                android:text="@string/menu"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_toRightOf="@+id/goBackButton"
                android:textSize="30dp" />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="5dp"
        android:background="@color/brown"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="5dp"
        android:background="@color/brown"/>

    <RelativeLayout
        android:id="@+id/recordActivityButton"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:clickable="true">
        <ImageView
            android:id="@+id/goToRecordActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:src="@drawable/ic_action_next_item" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/recordActivity"
            android:textSize = "30dp"
            android:layout_alignBottom="@+id/goToRecordActivity"
            android:layout_toRightOf="@+id/goToRecordActivity"
            android:layout_toEndOf="@+id/goToRecordActivity" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/saveActivityButton"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:clickable="true">
        <ImageView
            android:id="@+id/goToSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:src="@drawable/ic_action_next_item" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/saveActivity"
            android:textSize = "30dp"
            android:layout_alignBottom="@+id/goToSave"
            android:layout_toRightOf="@+id/goToSave"
            android:layout_toEndOf="@+id/goToSave" />

    </RelativeLayout>


</LinearLayout>