<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background = "@color/beige">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RelativeLayout
            android:id="@+id/menu"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true">
            <ImageView
                android:id="@+id/goBackButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitStart"
                android:layout_marginLeft="5dp"
                android:src="@drawable/ic_action_previous_item"/>

            <TextView
                android:text="@string/menu"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:gravity="center_vertical"
                android:layout_toRightOf="@+id/goBackButton"
                android:textSize="30dp" />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="5dp"
        android:background="@color/brown"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="30dp">


    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="5dp"
        android:background="@color/brown"/>

    <RelativeLayout
        android:id="@+id/makeWishActivityButton"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:clickable="true">
        <ImageView
            android:id="@+id/goToMakeWish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:src="@drawable/ic_action_next_item" />
    />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/goToMakeWish"

            android:text="@string/makeWishActivity"
            android:gravity="center_vertical"
            android:textSize = "30dp"
            android:id="@+id/textView" />

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/deleteWishActivityButton"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:clickable="true">
        <ImageView
            android:id="@+id/goToDeleteWish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:src="@drawable/ic_action_next_item" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/deleteWishActivity"
            android:textSize = "30dp"
            android:layout_alignBottom="@+id/goToDeleteWish"
            android:layout_toRightOf="@+id/goToDeleteWish"
            android:layout_toEndOf="@+id/goToDeleteWish" />

    </RelativeLayout>

</LinearLayout>